@@ -84,7 +84,7 @@ class ExecuteUpdateCommandsPipe(source: Pipe, db: GraphDatabaseService, commands
 
   def executionPlan() = source.executionPlan() + "\nUpdateGraph(" + commands.mkString + ")"
 
-  def symbols = source.symbols.add(commands.flatMap(_.identifier2).toMap)
+  def symbols = source.symbols.add(commands.flatMap(_.identifiers).toMap)
 
   def assertTypes(symbols: SymbolTable) {
     commands.foreach(_.assertTypes(symbols))
